--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <script src="script.js"></script>
+    
     <form class="fibForm">
-        <input type="text" class="fibInput" placeholder="">
+        
+        <input type="text" id="fibInput" placeholder="">
         <button id="fibRunButton" type="submit">Fibonacci function</button>
     </form>
     <div id="resultTextDiv">
         <p id="resultText"></p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
